@@ -34,11 +34,10 @@ JAVA_OPTS="-Dfile.encoding=UTF-8 -server \
                          -XX:+UseG1GC -XX:SoftRefLRUPolicyMSPerMB=1 -XX:+UnlockExperimentalVMOptions \
                          -XX:G1NewSizePercent=15 -XX:G1MaxNewSizePercent=45 -XX:-OmitStackTraceInFastThrow \
                          -Djava.security.egd=file:/dev/./urandom \
+                         --enable-preview --enable-native-access=ALL-UNNAMED \
                          --add-opens java.base/java.lang=ALL-UNNAMED \
                          ${MAILBOXD_JAVA_OPTS} -Djava.io.tmpdir=/opt/zextras/mailboxd/work \
-                         -Djava.library.path=/opt/zextras/lib \
                          -Dzimbra.config=/localconfig/localconfig.xml \
-                         -Dzimbra.native.required=false \
                          -Dlog4j.configurationFile=/opt/zextras/conf/log4j.properties \
                          -cp /opt/zextras/mailbox/jars/mailbox.jar:/opt/zextras/mailbox/jars/*"
 
